--- a/_posts/2016-09-18-in-stock.md
+++ b/_posts/2016-09-18-in-stock.md
@@ -15,3 +15,5 @@ Now it could be shipped to more than 200 countries worldwide, why are you still 
 Don't forget to check back our [software download](https://bithollow.github.io/downloads/) and [user documentation](http://bithollow.github.io/documents/users/). If you are a developer, want to program your own software, also there's [developer documentation](http://bithollow.github.io/documents/developers).
 
 Soon, a pre-installed SD Card would be purchased from the [store](https://bithollow.com/shop/), the card contains a full installed quad-copter software stack, so you can plug-use directly, go go go!!
+
+The **BH** is in white, its DIP switch is improved thus GNSS auxiliary power supply could be cut from the battery. Compare to the black **BH v0.2**, we think it is now fully ready to be in your hand.
