--- a/_posts/2016-09-18-in-stock.md
+++ b/_posts/2016-09-18-in-stock.md
@@ -8,7 +8,7 @@ permalink: https://bithollow.com/in-stock/
 published: true
 post_date: 2016-09-18 11:50:38
 ---
-We are in stock! Now everyone can buy **BH Pilot** from https://bithollow.com/product/bh-pilot/, the powerful **BH Pilot** featured with 10DoF, GNSS and RTC clock. We believe it is the most cost-effective autopilot board on the market!
+We are in stock! Now everyone can buy **BH Pilot** from [https://bithollow.com/product/bh-pilot/](https://bithollow.com/product/bh-pilot/), the powerful **BH Pilot** featured with 10DoF, GNSS and RTC clock. We believe it is the most cost-effective autopilot board on the market!
 
 Now it could be shipped to more than 200 countries worldwide, why are you still waiting?! Boost your drones in the air, on the ground, on the water and under the 💦 
 
